css edited, took away heights to fix spacing

--- a/proj/src/App.css
+++ b/proj/src/App.css
@@ -4,7 +4,6 @@
 }
 
 .App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,17 +13,15 @@
 }
 
 .nav-links a {
-  color: blue; /* default color */
-  text-decoration: none; /* remove underline */
-  transition: color 0.3s ease; /* add a smooth transition effect */
+  color: blue; 
+  text-decoration: none; 
+  transition: color 0.3s ease; 
 }
 
-/* Change link color when hovered over */
 .nav-links a:hover {
   color: #B85042;
 }
 
-/* Keep the rest of your existing styles */
 .navbar {
   position: fixed;
   width: 100%;
@@ -53,7 +50,6 @@
   padding: 8px;
 }
 
-
 .nav-links li a {
   color:#8AA893;
   text-decoration: none;
@@ -67,9 +63,11 @@ main {
   padding-top: 350px;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   font-family: Monaco;
   color: #B85042;
+  padding-bottom: 350px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .about {
@@ -77,11 +75,9 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  padding-top: 20px;;
-  padding-bottom: 20px;
-  margin-left: 20%;
-  margin-right: 20%;
+  padding-bottom: 50px;
+  margin-left: 10%;
+  margin-right: 10%;
   font-family: Monaco;
 }
 
@@ -98,13 +94,19 @@ main {
   max-width: 800px;
   border-radius: 20px;
   position: relative;
-  margin: 15px auto; /* Center the card horizontally with auto margin */
+  margin: 15px auto; 
+  margin-left: 10%;
+  margin-right: 10%;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-group-horizontal {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; 
+  justify-content: center;
+  align-items: center;
 }
 
 .footerLinkImg{
@@ -114,23 +116,23 @@ main {
 }
 
 .projects{
-  padding-top: 148px;
+  padding-top: 30px;
   padding-bottom: 100px;
-  height: '100vh';
   justifyContent: 'center';
   alignItems: 'center';
   background-color: #D5D7AF;
   font-family: Monaco ;
+  
 }
 
 .Projects-Header{
   color: #B85042;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .contact {
-  padding-top: 60px;
-  padding-bottom: 0px;
+  padding-bottom: 40px;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
