--- a/proj/src/skills.css
+++ b/proj/src/skills.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 200px;
     margin-left: 20%;
     margin-right: 20%;
     font-family: Monaco;
